--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
       <div class="row flex-row-reverse">
         <div class="col-md-5 text-center bg-banner">
           <div class="layer-0" data-tilt data-tilt-full-page-listening>
-            <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1300" alt="Alfian Azis" class="rounded-circle image-banner" />
+            <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1000" alt="Alfian Azis" class="rounded-circle image-banner" />
           </div>
           <div class="layer-1" data-tilt data-tilt-full-page-listening>
-            <svg xmlns="http://www.w3.org/2000/svg" width="134" height="110" viewBox="0 0 174 150" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="500" width="134" height="110" viewBox="0 0 174 150" fill="none">
               <path d="M6.45964 146.5L87 7L167.54 146.5H6.45964Z" stroke="#FF4C29" stroke-width="7"/>
             </svg>
           </div>
 
           <div class="layer-2">
-            <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in-down" data-aos-delay="600" viewBox="0 0 82 83" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in-down" data-aos-delay="300" viewBox="0 0 82 83" fill="none">
               <path
                 d="M41.19 2.8217C46.3911 2.8217 51.4355 3.83986 56.183 5.84789C58.465 6.81308 60.6661 8.00785 62.7253 9.39899C64.7654 10.7773 66.6839 12.3602 68.4276 14.1039C70.1712 15.8475 71.7541 17.766 73.1324 19.8062C74.5236 21.8653 75.7183 24.0665 76.6835 26.3485C78.6916 31.096 79.7097 36.1403 79.7097 41.3414C79.7097 46.5425 78.6916 51.5868 76.6835 56.3344C75.7183 58.6163 74.5236 60.8175 73.1324 62.8766C71.7541 64.9168 70.1712 66.8353 68.4276 68.579C66.6839 70.3226 64.7654 71.9055 62.7253 73.2838C60.6661 74.675 58.465 75.8697 56.183 76.8349C51.4355 78.843 46.3911 79.8611 41.19 79.8611C35.989 79.8611 30.9446 78.843 26.1971 76.8349C23.9151 75.8697 21.714 74.675 19.6548 73.2838C17.6147 71.9055 15.6961 70.3226 13.9525 68.579C12.2089 66.8353 10.626 64.9168 9.24767 62.8766C7.85652 60.8175 6.66176 58.6164 5.69657 56.3344C3.68854 51.5868 2.67038 46.5425 2.67038 41.3414C2.67038 36.1403 3.68854 31.096 5.69657 26.3485C6.66176 24.0665 7.85652 21.8653 9.24767 19.8062C10.626 17.766 12.2089 15.8475 13.9525 14.1039C15.6961 12.3602 17.6147 10.7773 19.6548 9.39899C21.714 8.00785 23.9151 6.81308 26.1971 5.84789C30.9446 3.83986 35.989 2.8217 41.19 2.8217ZM41.19 0.676956C18.7317 0.676956 0.525635 18.8831 0.525635 41.3414C0.525635 63.7998 18.7317 82.0059 41.19 82.0059C63.6484 82.0059 81.8545 63.7998 81.8545 41.3414C81.8545 18.8831 63.6484 0.676956 41.19 0.676956Z"
                 fill="#334756"
@@ -64,7 +64,7 @@
           </div>
           <div class="layer-3" data-tilt data-tilt-full-page-listening></div>
           <div class="layer-3a" data-tilt data-tilt-full-page-listening>
-            <svg xmlns="http://www.w3.org/2000/svg" width="125" height="125" viewBox="0 0 125 125" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="200" width="125" height="125" viewBox="0 0 125 125" fill="none">
               <rect x="1" y="1" width="123" height="123" stroke="#082032" stroke-width="2"/>
             </svg>
           </div>
