--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
               <rect x="1" y="1" width="123" height="123" stroke="#082032" stroke-width="2"/>
             </svg>
           </div>
-          <div class="layer-4">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="28" viewBox="0 0 30 28" fill="none">
-              <path d="M15 3.04572L17.5821 10.4742L17.8106 11.1315L18.5063 11.1457L26.3692 11.3059L20.1022 16.0572L19.5477 16.4776L19.7492 17.1437L22.0266 24.6712L15.5712 20.1792L15 19.7817L14.4288 20.1792L7.97345 24.6712L10.2508 17.1437L10.4523 16.4776L9.89781 16.0572L3.6308 11.3059L11.4937 11.1457L12.1894 11.1315L12.4179 10.4742L15 3.04572Z" stroke="white" stroke-width="2"/>
-            </svg>
-          </div>
           <div class="layer-3b">
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-delay="400" width="83" height="83" viewBox="0 0 83 83" fill="none">
               <rect x="1.5" y="1.5" width="80" height="80" stroke="#FF4C29" stroke-width="3"/>
+            </svg>
+          </div>
+          <div class="layer-4">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="250" width="30" height="28" viewBox="0 0 30 28" fill="none">
+              <path d="M15 3.04572L17.5821 10.4742L17.8106 11.1315L18.5063 11.1457L26.3692 11.3059L20.1022 16.0572L19.5477 16.4776L19.7492 17.1437L22.0266 24.6712L15.5712 20.1792L15 19.7817L14.4288 20.1792L7.97345 24.6712L10.2508 17.1437L10.4523 16.4776L9.89781 16.0572L3.6308 11.3059L11.4937 11.1457L12.1894 11.1315L12.4179 10.4742L15 3.04572Z" stroke="white" stroke-width="2"/>
             </svg>
           </div>
         </div>
