--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="col container pad-top">
-          <div class="row margin" style="color: rgb(255, 76, 41)" data-aos="fade-right">
+          <div class="row margin mb-3" style="color: rgb(255, 76, 41)" data-aos="fade-right">
             <h3 class="fw-bold verdana">Hi, i'm Alfian Azis</h3>
           </div>
           <div class="row margin" data-aos-delay="400" data-aos="fade-right">
