--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <img src="img/projects/1.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
                 <h5 class="card-title"><b>Human Capital Information Systems</b><br> Create & developing Human Capital web app</h5>
-                <p class="card-text">
+                <p class="card-text line-clamp">
                   This project is a develop of KPN Corp. human capital web app. KPN Corporation is an company who engaged in four main business divisions , namely : agriculture, cement and building materials, property, and international
                   trading. Primarily based in Indonesia, and also business presence in Singapore, Vietnam, Sri Lanka, and Mauritius.
                 </p>
@@ -148,7 +148,7 @@
               <img src="img/projects/3.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
                 <h5 class="card-title"><b>KPN Recruitment</b><br> Create & developing recruitment web app for KPN Corp.</h5>
-                <p class="card-text">This project is is a necessity which will make it easier for the recruitment department at KPN corp to collect data & process the recruitment of prospective employees who will later work at KPN Corp.</p>
+                <p class="card-text line-clamp">This project is is a necessity which will make it easier for the recruitment department at KPN corp to collect data & process the recruitment of prospective employees who will later work at KPN Corp.</p>
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@
               <img src="img/projects/2.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
                 <h5 class="card-title"><b>OPTIMIS</b><br> Develop of databases and back-end websites</h5>
-                <p class="card-text">
+                <p class="card-text line-clamp">
                   This project is a develop of Enterprise Business websites one of divisions at Smartfren. Smartfren is an telecommunications company based in Indonesia and the Enterprise Business is a one of divisions at Smartfren who
                   provides postpaid services.
                 </p>
